[package]
name = "calendar_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
http = "1.1.0"
serde_json = "1.0.129"
tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
